--- a/contact.css
+++ b/contact.css
@@ -119,6 +119,15 @@
 }
 .icon{
     position: absolute;
-    top: 20%;
+    top: 25%;
     left: 55%;
+    line-height: 5;
+}
+.icon p{
+    font-size: 30px;
+    color: aliceblue;
+}
+.icon p i{
+    font-size: 50px;
+    color: aliceblue;
 }
