--- a/style.css
+++ b/style.css
@@ -80,6 +80,7 @@
     font-size: 50px;
 }
 .txt p{
+    font-size: 20px;
     line-height: 3;
     font-family: "Slabo 45px", serif;
     font-weight: 400;
@@ -111,14 +112,16 @@
     border: 25px solid rgb(255, 255, 255);
     filter: drop-shadow(100px white);
     box-shadow: 0px 0px 120px 5px #fff;
+
 }
+
 .button{
     width: 180px;
     height: 50px;
     background-color: aqua;
     border-radius: 50px;
     margin-left: 20%;
-    margin-top: 7%;
+    margin-top: 4%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -138,6 +141,8 @@
     color: white;
     transition: 2s;
 }
+
+
 
 
 
