--- a/styleabout.css
+++ b/styleabout.css
@@ -59,7 +59,7 @@
 .menu ul li a:hover{
     padding: auto;
     color: white; 
-    background-color: transparent;
+    
 } 
 .about{
     width: 100%;
@@ -76,7 +76,7 @@
     height: 1000px;
 }
 .text{
-
+    margin-top: 0;
     width: 30%;
     height: auto;
     margin-left: 10.5%;
@@ -93,13 +93,20 @@
     margin-bottom: 5%;
 
 }
-.text a{
+.text a{ 
+    border-radius: 20px;
     text-decoration: none;
     background-color: aqua;
     color: black;
-    font-weight: 900px;
+    font-weight: bold;
     font-size: 25px;
     padding: 10px 25px;
+}
+.text a:hover{
+    transition: 2s;
+    color: aliceblue;
+    background-color: rgb(0, 85, 255);
+    font-weight: bold;
 }
 .image{
     float: right;
